eclim docs 2.6.0